--- a/styles/bootstrap-child.css
+++ b/styles/bootstrap-child.css
@@ -23,7 +23,8 @@ body.home .navbar .navbar-nav .nav-1 {}
 .navbar-toggler:hover i {}
 
 /* Custom Buttons */
-.btn { border-radius: 100px; border: 0; color: #FFFFFF; transition: all 0.5s; padding: 8px 32px; margin: 0 20px 20px 0; }
+.btn { border-radius: 100px; border: 0; color: #FFFFFF; transition: all 0.5s; height: 40px; margin: 0 20px 20px 0; }
+.btn { padding-left: 32px; padding-right: 32px; }
 .btn:last-child { margin-right: 0; }
 .btn:focus,
 .btn:active { outline: none !important; box-shadow: none; }
@@ -45,8 +46,8 @@ body.home .navbar .navbar-nav .nav-1 {}
 .btn.btn-lg { padding: 14px 40px; font-size: 140%; }
 
 /* Form Control */
-.form-control { height: 50px; padding: 15px; font-size: 16px; color: #FFF; border: 0; }
-.form-control { background-color: transparent; border-bottom: 2px solid #B81F68; border-radius: 0; }
+.form-control { height: 50px; padding: 15px; font-size: 16px; color: #333333; }
+.form-control { background-color: #FFFFFF; border: 1px solid #E5E5E5; border-radius: 100px; }
 .form-control:focus { background-color: transparent; }
 
 textarea:focus,
