--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -22,10 +22,15 @@ svg { height: 100%; width: 100%; }
 table { width: 100%; }
 
 /* General */
+#icon { cursor: pointer; fill: url(#gradient); }
 .hidden { display: none; z-index: -1000 !important; }
 .required { color: red; font-weight: bold; }
+.waves { position: relative; }
+.waves:before { position: absolute; height: 100%; width: 100%; content: ""; top: 0; opacity: 0.1; }
+.waves:before { background-image: url(../images/patt-waves.png); mix-blend-mode: overlay; }
+.shaded { background-color: #F1F1F1; }
 
-.fold { overflow-x: hidden; min-height: 100vh; padding-top: 150px; padding-bottom: 150px; }
+.fold { overflow-x: hidden; min-height: 100vh; padding-top: 100px; padding-bottom: 100px; }
 .fold { background-position: center; background-repeat: no-repeat; background-attachment: fixed; }
 
 /* Line Heights */
@@ -76,24 +81,26 @@ header .list-menu-item a:hover:before { width: 100%; }
 .fold-main .container .row ~ div { align-self: center; }
 
 /* Deck: Solutions */
-.deck-solutions .card { text-align: center; padding: 0; }
+.deck-solutions .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; position: relative; box-shadow: 0 0 0; }
 .deck-solutions .card h4 { font-weight: bold; }
 .deck-solutions .card p { margin-bottom: 0; }
+.deck-solutions .card-body { padding: 30px; min-height: 320px; opacity: 1; transition: 0.5s all; }
+.deck-solutions .card-body { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); border-radius: 10px; }
+.deck-solutions .card-body svg { max-height: 100px; max-width: 100px; margin-bottom: 30px; }
+.deck-solutions .card-back { position: absolute; background-color: blue; height: 100%; width: 100%; top: 0; color: #FFFFFF; }
+.deck-solutions .card-back { opacity: 0; transition: 0.5s all; border-radius: 10px; transform: rotateY(180deg); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); }
+.deck-solutions .card-back h4 { margin-bottom: 10px; }
+.deck-solutions .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; }
+.deck-solutions .card-back span { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 40px); }
+.deck-solutions .card:hover .card-body { opacity: 0; transform: rotateY(180deg); }
+.deck-solutions .card:hover .card-back { opacity: 1; transform: rotateY(0); }
 
-/* Card Flip */
-.card-flip { background-color: transparent; width: 100%; height: 320px; perspective: 1000px; margin-bottom: 30px; }
-.card-flip .card { position: relative; width: 100%; height: 100%; transition: transform 0.8s; transform-style: preserve-3d; }
-.card-flip .card div { border-radius: 10px; }
-.card-flip:hover .card { transform: rotateY(180deg); }
+/* Fold: Clients */
+.fold-clients { padding: 50px 0 0; background: #ad2bad; color: #FFFFFF; }
+.fold-clients { /*background: linear-gradient(rgba(173,43,173,1) 0%, rgba(47,43,173,1) 50%);*/ }
 
-.card-flip .card-front { color: black; background-color: #FFFFFF; }
-.card-flip .card-front i { background: -webkit-linear-gradient(top, #2e2cae 0%,#0196fd 100%); font-size: 96px; }
-.card-flip .card-front i { -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 20px; }
-.card-flip .card-front,
-.card-flip .card-back { position: absolute; left: 0; top: 0; width: 100%; height: 100%; backface-visibility: hidden; padding: 30px; }
-.card-flip .card-back { color: white; transform: rotateY(180deg); }
-.card-flip .card-back { background: -webkit-linear-gradient(top, #2e2cae 0%,#0196fd 100%); }
-.card-flip .card-back i { font-size: 160px; color: rgb(255, 255, 255, 0.4); }
+/* Fold: Newsletter */
+.fold-newsletter { padding: 50px 0; background: #2f2bad; color: #FFFFFF; }
 
 /* Deck: Blog */
 .deck-blog { margin-bottom: 30px; }
