--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -30,7 +30,7 @@ table { width: 100%; }
 .waves:before { background-image: url(../images/patt-waves.png); mix-blend-mode: overlay; }
 .shaded { background-color: #F1F1F1; }
 
-.fold { overflow-x: hidden; min-height: 100vh; padding-top: 100px; padding-bottom: 100px; }
+.fold { overflow-x: hidden; min-height: 100vh; padding-top: 150px; padding-bottom: 150px; }
 .fold { background-position: center; background-repeat: no-repeat; background-attachment: fixed; }
 
 /* Line Heights */
@@ -45,6 +45,7 @@ table { width: 100%; }
 .fc-navy 	{ color: #2f2bad; }
 .fc-violet	{ color: #ad2bad; }
 .fc-blue	{ color: #0099ff; }
+.fc-red		{ color: #EC254C; }
 
 /* Header */
 header { position: fixed; width: 100%; left: 0; top: 0; z-index: 100; }
@@ -96,11 +97,14 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-solutions .card:hover .card-back { opacity: 1; transform: rotateY(0); }
 
 /* Fold: Clients */
-.fold-clients { padding: 50px 0 0; background: #ad2bad; color: #FFFFFF; }
+.fold-clients { padding: 100px 0 50px; background: #ad2bad; color: #FFFFFF; }
 .fold-clients { /*background: linear-gradient(rgba(173,43,173,1) 0%, rgba(47,43,173,1) 50%);*/ }
 
 /* Fold: Newsletter */
-.fold-newsletter { padding: 50px 0; background: #2f2bad; color: #FFFFFF; }
+.fold-newsletter { padding: 100px 0; background: #2f2bad; color: #FFFFFF; }
+.fold-newsletter .form-control { border-color: #FFFFFF; }
+.fold-newsletter form { position: relative; }
+.fold-newsletter form .btn { margin: 0; position: absolute; top: 0; right: 0; }
 
 /* Deck: Blog */
 .deck-blog { margin-bottom: 30px; }
@@ -149,7 +153,7 @@ footer .column-technicals li { margin-left: 30px; }
 
 /* Floaters */
 .floaters { position: fixed; right: -70px; bottom: 30px; z-index: 100; transition: all 0.3s; }
-.floaters .btn { border: 0; background: #000000 !important; color: #FFF !important; border-radius: 50%; }
+.floaters .btn { border: 0; background: #EC254C !important; color: #FFF !important; border-radius: 50%; }
 .floaters .btn { width: 50px; height: 50px; display: flex; padding: 0; text-align: center; opacity: 0.5; }
 .floaters .btn { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2); align-items: center; justify-content: center; }
 .floaters .btn:hover { opacity: 1; animation: beating 2s infinite; }
