--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -81,20 +81,20 @@ header .list-menu-item a:hover:before { width: 100%; }
 .fold-main .container .row { display: flex; align-items: center; }
 .fold-main .container .row ~ div { align-self: center; }
 
-/* Deck: Solutions */
-.deck-solutions .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; position: relative; box-shadow: 0 0 0; }
-.deck-solutions .card h4 { font-weight: bold; }
-.deck-solutions .card p { margin-bottom: 0; }
-.deck-solutions .card-body { padding: 30px; min-height: 320px; opacity: 1; transition: 0.5s all; }
-.deck-solutions .card-body { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); border-radius: 10px; }
-.deck-solutions .card-body svg { max-height: 100px; max-width: 100px; margin-bottom: 30px; }
-.deck-solutions .card-back { position: absolute; background-color: blue; height: 100%; width: 100%; top: 0; color: #FFFFFF; }
-.deck-solutions .card-back { opacity: 0; transition: 0.5s all; border-radius: 10px; transform: rotateY(180deg); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); }
-.deck-solutions .card-back h4 { margin-bottom: 10px; }
-.deck-solutions .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; }
-.deck-solutions .card-back span { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 40px); }
-.deck-solutions .card:hover .card-body { opacity: 0; transform: rotateY(180deg); }
-.deck-solutions .card:hover .card-back { opacity: 1; transform: rotateY(0); }
+/* Deck: Services */
+.deck-services .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; position: relative; box-shadow: 0 0 0; }
+.deck-services .card h4 { font-weight: bold; }
+.deck-services .card p { margin-bottom: 0; }
+.deck-services .card-body { padding: 30px; min-height: 320px; opacity: 1; transition: 0.5s all; }
+.deck-services .card-body { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); border-radius: 10px; }
+.deck-services .card-body svg { max-height: 100px; max-width: 100px; margin-bottom: 30px; }
+.deck-services .card-back { position: absolute; background-color: blue; height: 100%; width: 100%; top: 0; color: #FFFFFF; }
+.deck-services .card-back { opacity: 0; transition: 0.5s all; border-radius: 10px; transform: rotateY(180deg); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); }
+.deck-services .card-back h4 { margin-bottom: 10px; }
+.deck-services .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; }
+.deck-services .card-back span { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 40px); }
+.deck-services .card:hover .card-body { opacity: 0; transform: rotateY(180deg); }
+.deck-services .card:hover .card-back { opacity: 1; transform: rotateY(0); }
 
 /* Fold: Clients */
 .fold-clients { padding: 100px 0 50px; background: #ad2bad; color: #FFFFFF; }
