--- a/styles/bootstrap-child.css
+++ b/styles/bootstrap-child.css
@@ -24,7 +24,7 @@ body.home .navbar .navbar-nav .nav-1 {}
 
 /* Custom Buttons */
 .btn { border-radius: 100px; border: 0; color: #FFFFFF; transition: all 0.5s; }
-.btn { padding: 14px 48px; margin: 0 20px 20px 0; font-size: 16px; height: 50px; }
+.btn { padding: 14px 48px; margin: 0 20px 20px 0; font-size: 16px; height: 50px; cursor: pointer; }
 .btn:last-child { margin-right: 0; }
 .btn:focus,
 .btn:active { outline: none !important; box-shadow: none; }
@@ -45,15 +45,28 @@ body.home .navbar .navbar-nav .nav-1 {}
 .btn.btn-lg { height: 60px; padding: 16px 56px; font-size: 120%; }
 
 /* Form Control */
-.form-control { padding: 12px; font-size: 16px; color: #333333; height: 50px; }
-.form-control { background-color: #FFFFFF; border: 1px solid #E5E5E5; border-radius: 100px; }
+.form-control { padding: 12px 20px; font-size: 16px; color: #333333; height: 50px; margin: 0 20px 20px 0; }
+.form-control { background-color: #FFFFFF; border: 1px solid #0099ff; border-radius: 100px; }
 
 .form-sm {  height: 40px; padding: 16px; font-size: 80%; }
 .form-lg {  height: 60px; padding: 24px; font-size: 120%; }
 
 /* Forms */
-.form-group .form-control { border-radius: 100px 0 0 100px; }
-.form-group .btn { border-radius: 0 100px 100px 0; }
+form .form-group .form-control { border-radius: 100px 0 0 100px; }
+form .form-group .btn { border-radius: 0 100px 100px 0; }
+
+form .dropdown-toggle { color: #333333; background-color: #FFFFFF; border: 1px solid #0099ff; }
+form .dropdown-toggle { padding-left: 20px; padding-right: 20px; width: 100%;  text-align: left; position: relative; }
+form .dropdown-toggle:hover { color: #333333; }
+form .dropdown-toggle::after { position: absolute; right: 20px; top: 50%; transform: translate(0, -50%); content: "\f107"; }
+form .dropdown-toggle::after { border-top-color: #000000; font-family: 'Font Awesome 5 Free'; color: #0099ff; font-weight: 900; border: 0; }
+form .dropdown-menu { width: 100%; }
+form .dropdown-menu a:hover { background-color: #0099ff; color: #FFFFFF; }
+form .dropdown-menu p { padding: .25rem 1.5rem; margin: 0; font-weight: bold; }
+
+.list-checklist li:before { font-size: 24px; content: "\f00c"; }
+.list-checklist li:before { position: absolute; left: 0; top: 0; font-family: 'Font Awesome 5 Free'; }
+.list-checklist li:before { color: #0099ff; font-weight: 900; width: 20px; text-align: center; }
 
 textarea:focus,
 input[type="text"]:focus,
