--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,7 +1,8 @@
 /* Defaults */
 body { font-family: 'Roboto'; font-size: 16px; line-height: 24px; overflow-x: hidden; }
 
-h1, h2, h3, h4, h5 { font-family: 'Exo Bold'; }
+h1, h2, h3 { font-family: 'Exo Bold'; }
+h4, h5 { font-family: 'Exo'; }
 h1 { font-size: 48px; line-height: 56px; margin-bottom: 40px; }
 h2 { font-size: 40px; line-height: 48px; margin-bottom: 40px; }
 h3 { font-size: 32px; line-height: 40px; margin-bottom: 20px; }
@@ -79,6 +80,29 @@ header .list-menu-item a:hover:before { width: 100%; }
 .fold-main .container { align-self: center; }
 .fold-main .container .row { display: flex; align-items: center; }
 .fold-main .container .row ~ div { align-self: center; }
+
+/* Deck: Steps */
+.deck-steps .card h5 { position: relative; z-index: 1; transition: 0.3s all; }
+.deck-steps .card span { height: 100px; border-radius: 10px; background-color: #2f2bad; text-align: center; transition: 0.3s all; }
+.deck-steps .card span { line-height: 100px; display: block; position: absolute; top: -50px; left: 50%; width: 100px; }
+.deck-steps .card span { transform: translate(-50%, 0); font-size: 48px; font-family: 'Exo Bold'; color: #FFFFFF; }
+.deck-steps .card-body { padding: 80px 50px 30px; text-align: center; }
+.deck-steps .card-img-top { border-radius: 10px 10px 0 0; overflow: hidden; }
+.deck-steps .card-img-top img { transition: 0.3s all; }
+.deck-steps .card .waves:before { left: 0; }
+
+.deck-steps .card:hover img { transform: scale(1.1); }
+.deck-steps .card:hover span { width: 100%; height: 100%; top: 0; border-radius: 0 0 10px 10px; }
+.deck-steps .card:hover h5 { color: #FFFFFF; }
+
+.deck-steps .step-1 span { background-color: #0099ff; }
+.deck-steps .step-2 span { background-color: #2f2bad; }
+.deck-steps .step-3 span { background-color: #EC254C; }
+
+.deck-steps- .card:nth-child(even) { flex-direction: column-reverse; }
+.deck-steps- .card:nth-child(even) .card-body { padding: 30px 50px 100px; }
+.deck-steps- .card:nth-child(even) .card-body span { bottom: -50px; top: auto; }
+.deck-steps- .card:nth-child(even) .card-img-top { border-radius: 0 0 10px 10px; }
 
 /* Deck: Services */
 .deck-services .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; position: relative; box-shadow: 0 0 0; background-color: transparent; }
