--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -28,7 +28,7 @@ table { width: 100%; }
 .waves { position: relative; }
 .waves:before { position: absolute; height: 100%; width: 100%; content: ""; top: 0; opacity: 0.1; }
 .waves:before { background-image: url(../images/patt-waves.png); mix-blend-mode: overlay; }
-.shaded { background-color: #F1F1F1; }
+.shaded { background-color: #f4f6fd; }
 
 .fold { overflow-x: hidden; min-height: 100vh; padding-top: 150px; padding-bottom: 150px; }
 .fold { background-position: center; background-repeat: no-repeat; background-attachment: fixed; }
@@ -105,19 +105,37 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-steps- .card:nth-child(even) .card-img-top { border-radius: 0 0 10px 10px; }
 
 /* Deck: Services */
-.deck-services .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; position: relative; box-shadow: 0 0 0; background-color: transparent; }
+.deck-services .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; }
+.deck-services .card { position: relative; box-shadow: 0 0 0; background-color: transparent; }
 .deck-services .card h4 { font-weight: bold; }
 .deck-services .card p { margin-bottom: 0; }
 .deck-services .card-body { padding: 30px; min-height: 320px; transition: 0.5s all; }
 .deck-services .card-body { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); border-radius: 10px; }
 .deck-services .card-body svg { max-height: 100px; max-width: 100px; margin-bottom: 30px; }
-.deck-services .card-back { position: absolute; background-color: blue; height: 100%; width: 100%; top: 0; color: #FFFFFF; backface-visibility: hidden; }
+.deck-services .card-back { position: absolute; background: linear-gradient(#2f2bad 0%, #0099ff 100%); }
+.deck-services .card-back { width: 100%; top: 0; color: #FFFFFF; backface-visibility: hidden; height: 100%; }
 .deck-services .card-back { transition: 0.5s all; border-radius: 10px; transform: rotateY(180deg); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); }
 .deck-services .card-back h4 { margin-bottom: 10px; }
 .deck-services .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; }
 .deck-services .card-back span { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 40px); }
 .deck-services .card:hover .card-body { transform: rotateY(180deg); }
 .deck-services .card:hover .card-back { transform: rotateY(0); }
+
+/* Slider: Testimonials */
+#slider_testimonials .card-deck { padding: 20px 20px 40px; }
+#slider_testimonials .card-body { position: relative; }
+#slider_testimonials .card h4,
+#slider_testimonials .card p { padding-left: 120px; }
+#slider_testimonials .card p.position { font-size: 14px; }
+#slider_testimonials .card img { position: absolute; height: 100px;  width: 100px; border-radius: 100px; }
+
+#slider_testimonials .carousel-indicators { margin: 0 20px; justify-content: flex-start; }
+#slider_testimonials .carousel-indicators li { width: 20px; height: 6px; margin-right: 4px; margin-left: 4px; transition: 0.3s all; }
+#slider_testimonials .carousel-indicators li { background-color: #2f2bad; opacity: 1; border-radius: 10px; border: 0; }
+#slider_testimonials .carousel-indicators li.active { background-color: #2f2bad; width: 40px; }
+
+/* Fold: FAQ */
+.fold-faq {}
 
 /* Fold: Clients */
 .fold-clients { padding: 100px 0 50px; background: #ad2bad; color: #FFFFFF; }
