--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -124,8 +124,16 @@ header .list-menu-item a:hover:before { width: 100%; }
 /* Slider: Testimonials */
 #slider_testimonials .card-deck { padding: 20px 20px 40px; }
 #slider_testimonials .card-body { position: relative; }
+#slider_testimonials .card { position: relative; }
+#slider_testimonials .card:before { opacity: 0; border-radius: 10px; content: ""; width: 100%; height: 100%; }
+#slider_testimonials .card:before { background: linear-gradient(#2f2bad 0%, #0099ff 100%); transition: 0.3s all; }
+#slider_testimonials .card:before { position: absolute; top: 0; left: 0; transform: scale(0.0); }
+#slider_testimonials .card:hover:before { opacity: 1; transform: scale(1); }
+#slider_testimonials .card:hover .fc-navy,
+#slider_testimonials .card:hover h4,
+#slider_testimonials .card:hover p { color: #FFFFFF; }
 #slider_testimonials .card h4,
-#slider_testimonials .card p { padding-left: 120px; }
+#slider_testimonials .card p { padding-left: 120px; transition: 0.3s all; }
 #slider_testimonials .card p.position { font-size: 14px; }
 #slider_testimonials .card img { position: absolute; height: 100px;  width: 100px; border-radius: 100px; }
 
