--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -61,7 +61,7 @@ header .for-mobile .list-menu-item { display: block; }
 header .for-mobile .list-menu-item { margin: 0; }
 header .for-mobile .list-menu-item a { text-indent: 0 !important; }
 
-header.append { background: rgba(0, 0, 0, 1); }
+header.append { background: linear-gradient(rgba(47,43,173,1) 0%, rgba(173,43,173,1) 100%); }
 header.append .for-screen { padding-top: 20px; }
 header.append .for-screen .main-logo img { max-height: 50px; }
 header.append .for-mobile .main-logo img { max-height: 40px; }
@@ -92,12 +92,12 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-steps .card .waves:before { left: 0; }
 
 .deck-steps .card:hover img { transform: scale(1.1); }
-.deck-steps .card:hover span { width: 100%; height: 100%; top: 0; border-radius: 0 0 10px 10px; }
+.deck-steps .card:hover span { width: 100%; height: 100%; top: 0; }
 .deck-steps .card:hover h5 { color: #FFFFFF; }
 
 .deck-steps .step-1 span { background-color: #0099ff; }
 .deck-steps .step-2 span { background-color: #2f2bad; }
-.deck-steps .step-3 span { background-color: #EC254C; }
+.deck-steps .step-3 span { background-color: #ad2bad; }
 
 .deck-steps- .card:nth-child(even) { flex-direction: column-reverse; }
 .deck-steps- .card:nth-child(even) .card-body { padding: 30px 50px 100px; }
@@ -108,10 +108,10 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-services .card { text-align: center; padding: 0; margin-bottom: 30px; border-radius: 10px; }
 .deck-services .card { position: relative; box-shadow: 0 0 0; background-color: transparent; }
 .deck-services .card h4 { font-weight: bold; }
-.deck-services .card p { margin-bottom: 0; }
+.deck-services .card p { margin-bottom: 0; display: none; }
 .deck-services .card-body { padding: 30px; min-height: 320px; transition: 0.5s all; }
 .deck-services .card-body { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); border-radius: 10px; }
-.deck-services .card-body svg { max-height: 100px; max-width: 100px; margin-bottom: 30px; }
+.deck-services .card-body svg { max-height: 100px; max-width: 100px; margin-bottom: 30px; margin-top: 40px;}
 .deck-services .card-back { position: absolute; background: linear-gradient(#2f2bad 0%, #0099ff 100%); }
 .deck-services .card-back { width: 100%; top: 0; color: #FFFFFF; backface-visibility: hidden; height: 100%; }
 .deck-services .card-back { transition: 0.5s all; border-radius: 10px; transform: rotateY(180deg); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); }
@@ -219,6 +219,17 @@ footer .column-technicals li { margin-left: 30px; }
 .list-contact .contact-number:before 	{ content: "\f10b"; }
 .list-contact .contact-email:before 	{ content: "\f0e0"; }
 
+/* Scroll Down */
+.icon-scroll { display: block; text-align: center; color: #FFFFFF; width: 100px; height: 80px; margin: 0 auto; overflow: hidden; }
+.icon-scroll div { width: 32px; height: 48px; border: 2px solid #FFFFFF; border-radius: 32px; }
+.icon-scroll div { margin: 20px auto 10px; position: relative; transition: 0.3s all; }
+.icon-scroll div::after { position: absolute; content: ""; left: 50%; transform: translate(-50%); }
+.icon-scroll div::after { top: 10px; width: 4px; height: 8px; background: #FFFFFF; border-radius: 3px; }
+.icon-scroll div::after { animation-name: scroll; animation-duration: 2s; animation-iteration-count: infinite; animation-delay: 2s; }
+.icon-scroll span { color: #FFFFFF; opacity: 0; transition: 0.3s all; }
+.icon-scroll:hover span { color: #FFFFFF; opacity: 1; }
+.icon-scroll:hover div { margin-top: 0; }
+
 /* Animations */
 @keyframes beating {
 	0%		{ box-shadow: 0 0 0  5px rgba(184, 31 ,104, 0.2); }
@@ -234,4 +245,12 @@ footer .column-technicals li { margin-left: 30px; }
 	50% 	{ box-shadow: 0 0 0  5px rgba(255, 255 ,255, 0.2); }
 	75% 	{ box-shadow: 0 0 0 10px rgba(255, 255 ,255, 0.2); }
 	100% 	{ box-shadow: 0 0 0  5px rgba(255, 255 ,255, 0.2); }
+}
+
+@keyframes scroll {
+	0% 		{ opacity: 1; margin-top: 0; }
+	25% 	{ opacity: 1; margin-top: 15px; }
+	50% 	{ opacity: 0; margin-top: 15px; }
+	75% 	{ opacity: 0; margin-top: 0; }
+	100% 	{ opacity: 1; margin-top: 0; }
 }
