--- a/styles/menufullpage.css
+++ b/styles/menufullpage.css
@@ -10,7 +10,7 @@
 
 .menu-link i { text-decoration: none; font-size: 40px; color: #fff; }
 
-#menu { background: rgba(33, 33, 33, 0.6); z-index: 998; max-width: 240px; }
+#menu { background: rgba(33, 33, 33, 0.6); z-index: 998; max-width: 320px; }
 #menu ul { margin-top: 150px; }
 #menu li { text-align: center; transition: all 0.4s ease; padding: 20px 0; }
 #menu li a { font-family: 'Open Sans', sans-serif; font-weight: 600; text-transform: uppercase; }
@@ -123,12 +123,13 @@
 .menu-link span::after { height: 2px; }
 .menu-link span { height: 3px; }
 
-#menu { background: rgba(51, 0, 102, 0.9); height: 100vh !important; }
+#menu { background: linear-gradient(rgba(173,43,173,1) 0%, rgba(47,43,173,1) 50%); }
+#menu { /*background: rgba(51, 0, 102, 0.9);*/ height: 100vh !important; }
 #menu.panel { left: auto; right: -100%; padding-left: 20px; padding-right: 20px; }
 #menu.panel { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.4); }
 #menu ul { margin-top: 100px; padding: 0; list-style: none; }
-#menu li { text-align: left; padding: 0; margin-bottom: 10px; border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-#menu li a { font-weight: 300; text-transform: capitalize; font-size: 14px; }
+#menu li { text-align: left; padding: 0; margin-bottom: 20px; border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
+#menu li a { font-weight: 300; text-transform: capitalize; font-size: 20px; }
 #menu li a { padding: 5px 10px; }
 #menu li a:hover { padding-left: 20px; }
 
