--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,24 +1,28 @@
 /* 320  */
 @media (min-width: 320px) {	
-	.for-mobile { display: block; }
-	.for-screen { display: none; }
+	.for-mobile { display: block !important; }
+	.for-screen { display: none !important; }
 	
-	h1 { font-size: 30px; line-height: 38px; margin-bottom: 20px; }
-	h2 { font-size: 22px; line-height: 30px; margin-bottom: 20px; }
-	h3 { font-size: 22px; line-height: 30px; margin-bottom: 10px; }
-	h4 { font-size: 14px; line-height: 22px; margin-bottom: 10px; }
-	h5 { font-size: 14px; line-height: 22px; }
+	h1 { font-size: 46px; line-height: 54px; margin-bottom: 20px; }
+	h2 { font-size: 38px; line-height: 46px; margin-bottom: 20px; }
+	h3 { font-size: 30px; line-height: 38px; margin-bottom: 10px; }
+	h4 { font-size: 22px; line-height: 30px; margin-bottom: 10px; }
+	h5 { font-size: 16px; line-height: 24px; }
 	p  { font-size: 14px; line-height: 22px; margin-bottom: 10px; }
 	li { font-size: 14px; line-height: 22px; }
 	
 	.fold { padding-top: 50px; padding-bottom: 50px; }
-	.fold-main { padding: 0; }
-	
+	.fold-main { padding: 100px 0 40px 0; }
+	.fold-main h1 { font-size: 38px; line-height: 46px; }
+	.fold-newsletter form .btn { position: static; }
+
 	header { background: rgba(0, 0, 0, 1); }
 	
 	.floaters { bottom: 20px; }
 	.floaters.show { right: 20px; }
 
+	textarea,
+	.form-control { font-size: 14px; }
 	.btn { white-space: normal; height: auto; }
 	.btn.btn-lg { height: auto; white-space: normal; padding: 16px 56px; font-size: 100%; }
 }
@@ -33,8 +37,8 @@
 
 /* 768 */
 @media (min-width: 768px) {	
-	.for-mobile { display: none; }
-	.for-screen { display: block; }
+	.for-mobile { display: none !important; }
+	.for-screen { display: block !important; }
 	
 	.mb-5 { margin-bottom: 3rem !important; }
 	
@@ -48,6 +52,8 @@
 	
 	.fold { padding-top: 150px; padding-bottom: 150px; }
 	.fold-main { padding: 0; }
+	.fold-main h1 { font-size: 40px; line-height: 48px; }
+	.fold-newsletter form .btn { position: absolute; }
 	
 	header { background: rgba(0, 0, 0, 0); }
 	header .for-mobile { display: block; }
@@ -56,6 +62,8 @@
 	.floaters { bottom: 30px; }
 	.floaters.show { right: 30px; }
 
+	textarea,
+	.form-control { font-size: 16px; }
 	.btn { white-space: nowrap; height: 50px; }
 	.btn.btn-lg { height: 60px; white-space: nowrap; font-size: 120%; }
 
