--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -28,9 +28,9 @@ table { width: 100%; }
 .waves { position: relative; }
 .waves:before { position: absolute; height: 100%; width: 100%; content: ""; top: 0; opacity: 0.1; }
 .waves:before { background-image: url(../images/patt-waves.png); mix-blend-mode: overlay; }
-.shaded { background-color: #f4f6fd; }
+.shaded { background-color: #eef7fa; }
 
-.fold { /*overflow-x: hidden;*/ min-height: 100vh; padding-top: 150px; padding-bottom: 150px; }
+.fold { overflow: hidden; min-height: 100vh; padding-top: 150px; padding-bottom: 150px; }
 .fold { background-position: center; background-repeat: no-repeat; background-attachment: fixed; }
 
 /* Line Heights */
@@ -68,7 +68,8 @@ header .for-mobile .list-menu-item { display: block; }
 header .for-mobile .list-menu-item { margin: 0; }
 header .for-mobile .list-menu-item a { text-indent: 0 !important; }
 
-header.append { background: linear-gradient(rgba(47,43,173,1) 0%, rgba(173,43,173,1) 100%); }
+header.append { /*background: linear-gradient(rgba(47,43,173,1) 0%, rgba(173,43,173,1) 100%);*/ }
+header.append { background-color: rgba(47,43,173,1); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.4); }
 header.append .for-screen { padding-top: 20px; }
 header.append .for-screen .main-logo img { max-height: 50px; }
 header.append .for-mobile .main-logo img { max-height: 40px; }
@@ -77,13 +78,14 @@ header .list-menu { text-align: right; margin-bottom: 0; padding-left: 0; }
 header .list-menu-item { display: inline-block; margin: 0 0 0 40px; font-weight: bold; }
 header .list-menu-item a { color: #FFFFFF; padding: 8px 0; display: block; position: relative; }
 header .list-menu-item a:before { position: absolute; content: ""; transition: all 0.3s; }
-header .list-menu-item a:before { width: 0; height: 2px; bottom: 0; background-color: #FBED8A; }
+header .list-menu-item a:before { width: 0; height: 2px; bottom: 0; background-color: #0099ff; }
 header .list-menu-item a:hover,
-header .list-menu-item a.active { color: #FBED8A; }
+header .list-menu-item a.active { color: #FBED8A; color: #0099ff; }
 header .list-menu-item a:hover:before { width: 100%; }
 
 /* Fold: Main */
-.fold-main { background-attachment: scroll; background-color: #FBED8A; color: #FFFFFF; display: flex; }
+.fold-main { background-attachment: scroll; background-color: #FBED8A; color: #FFFFFF; }
+.fold-main { display: flex; background-position-y: top; background-size: cover; }
 .fold-main .container { align-self: center; }
 .fold-main .container .row { display: flex; align-items: center; }
 .fold-main .container .row ~ div { align-self: center; }
@@ -112,15 +114,16 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-services .card { position: relative; box-shadow: 0 0 0; background-color: transparent; }
 .deck-services .card h4 { font-weight: bold; }
 .deck-services .card p { margin-bottom: 0; display: none; }
-.deck-services .card-body { padding: 30px; min-height: 320px; transition: 0.5s all; }
+.deck-services .card-body { padding: 30px; min-height: 160px; transition: 0.5s all; background-color: #FFFFFF; }
 .deck-services .card-body { box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); border-radius: 10px; }
-.deck-services .card-body svg { max-height: 80px; max-width: 80px; margin-bottom: 30px; margin-top: 40px; }
-.deck-services .card-back { position: absolute; background: linear-gradient(#2f2bad 0%, #0099ff 100%); }
-.deck-services .card-back { width: 100%; top: 0; color: #FFFFFF; backface-visibility: hidden; height: 100%; }
+.deck-services .card-body svg { max-height: 50px; max-width: 50px; margin-bottom: 10px; height: 50px; }
+.deck-services .card-back { position: absolute; background: linear-gradient(#2f2bad 0%, #0099ff 100%); display: flex; align-items: center; }
+.deck-services .card-back { width: 100%; top: 0; color: #FFFFFF; backface-visibility: hidden; height: 100%; justify-content: center; }
 .deck-services .card-back { transition: 0.5s all; border-radius: 10px; transform: rotateY(180deg); box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1); }
 .deck-services .card-back h4 { margin-bottom: 10px; }
-.deck-services .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; }
+.deck-services .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; max-height: 120px; }
 .deck-services .card-back span { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 40px); }
+.deck-services .card-back .btn { margin: 0; display: none; /* TMP */ }
 .deck-services .card:hover .card-body { transform: rotateY(180deg); }
 .deck-services .card:hover .card-back { transform: rotateY(0); }
 
@@ -170,7 +173,7 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-blog .card-month { text-transform: uppercase; }
 
 /* Footer */
-footer { color: #FFFFFF; padding-top: 150px; padding-bottom: 50px; }
+footer { color: #FFFFFF; padding-top: 150px; padding-bottom: 50px; overflow: hidden; }
 footer { background-position: top; background-size: cover; background-color: #0165cc; }
 footer a { color: #FFFFFF; }
 footer a:hover { color: #FBED8A; }
@@ -227,7 +230,7 @@ footer .column-technicals li { margin-left: 30px; }
 .list-links li:hover { margin-left: 0; }
 
 /* Scroll Down */
-.icon-scroll { position: absolute; bottom: 0; left: 50%; transform: translate(-50%, 0); }
+.icon-scroll { position: absolute; bottom: 40px; left: 50%; transform: translate(-50%, 0); }
 .icon-scroll { display: block; text-align: center; color: #FFFFFF; width: 100px; height: 80px; margin: 0 auto; overflow: hidden; }
 .icon-scroll div { width: 32px; height: 48px; border: 2px solid #FFFFFF; border-radius: 32px; }
 .icon-scroll div { margin: 20px auto 10px; position: relative; transition: 0.3s all; }
