--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -190,7 +190,8 @@ footer .column-technicals li { margin-left: 30px; }
    .js #loader { display: block; position: absolute; left: 100px; top: 0; }
 
 .se-pre-con { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 9999; }
-.se-pre-con { display: flex; justify-content: center; align-items: center; background-color: #000000; }
+.se-pre-con { display: flex; justify-content: center; align-items: center; background-color: #2f2bad; }
+.se-pre-con { background: linear-gradient(rgba(173,43,173,1) 0%, rgba(47,43,173,1) 100%); }
 .se-pre-con img { height: 100px; width: 100px; }
 
 /* Floaters */
