--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -22,7 +22,7 @@ svg { height: 100%; width: 100%; }
 table { width: 100%; }
 
 /* General */
-#icon { cursor: pointer; fill: url(#gradient); }
+#icon { cursor: pointer; /*fill: url(#gradient); TMP*/ }
 .hidden { display: none; z-index: -1000 !important; }
 .required { color: red; font-weight: bold; }
 .waves { position: relative; }
@@ -93,7 +93,7 @@ header .list-menu-item a:hover:before { width: 100%; }
 /* Deck: Steps */
 .deck-steps .card { margin-bottom: 80px; }
 .deck-steps .card h5 { position: relative; z-index: 1; transition: 0.3s all; }
-.deck-steps .card span { height: 100px; border-radius: 10px; background-color: #2f2bad; text-align: center; transition: 0.3s all; }
+.deck-steps .card span { height: 100px; border-radius: 100px; background-color: #2f2bad; text-align: center; transition: 0.3s all; }
 .deck-steps .card span { line-height: 100px; display: block; position: absolute; top: -50px; left: 50%; width: 100px; }
 .deck-steps .card span { transform: translate(-50%, 0); font-size: 48px; font-family: 'Exo Bold'; color: #FFFFFF; }
 .deck-steps .card-body { padding: 80px 50px 30px; text-align: center; }
@@ -102,7 +102,7 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-steps .card .waves:before { left: 0; }
 
 .deck-steps .card:hover img { transform: scale(1.1); }
-.deck-steps .card:hover span { width: 100%; height: 100%; top: 0; }
+.deck-steps .card:hover span { width: 100%; height: 100%; top: 0; border-radius: 10px; }
 .deck-steps .card:hover h5 { color: #FFFFFF; }
 
 .deck-steps .step-1 span { background-color: #0099ff; }
@@ -124,20 +124,34 @@ header .list-menu-item a:hover:before { width: 100%; }
 .deck-services .card-back svg { fill: rgba(255, 255, 255, 0.3); max-width: 240px; max-height: 120px; }
 .deck-services .card-back span { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 40px); }
 .deck-services .card-back .btn { margin: 0; display: none; /* TMP */ }
-.deck-services .card:hover .card-body { transform: rotateY(180deg); }
-.deck-services .card:hover .card-back { transform: rotateY(0); }
+.deck-services .card:hover .card-body { /*transform: rotateY(180deg);*/ }
+.deck-services .card:hover .card-back { /*transform: rotateY(0);*/ }
+
+.deck-services .card { background-color: #FFFFFF; }
+.deck-services .card svg { fill: #2f2bad; transition: 0.3s all; }
+.deck-services .card-back { display: none; }
+.deck-services .card-body { background-color: transparent; }
+.deck-services .card:before { position: absolute; height: 100%; width: 100%; content: ""; border-radius: 10px; opacity: 0; transform: scale(0.0); }
+.deck-services .card:before { background: linear-gradient(rgba(47,43,173,1) 0%, rgba(173,43,173,1) 100%); transition: 0.3s all; top: 0; left: 0; }
+.deck-services .card:hover { color: #FFFFFF; }
+.deck-services .card:hover svg { fill: #FFFFFF; }
+.deck-services .card:hover:before { opacity: 1; transform: scale(1.0); }
+
+/* Fold: Testimonials */
+.fold-testimonials { background-color: #2f2bad; color: #FFFFFF; min-height: auto; }
+.fold-testimonials .card h4,
+.fold-testimonials .card p { color: #000000; }
 
 /* Slider: Testimonials */
 #slider_testimonials .card-deck { padding: 20px 20px 40px; }
-#slider_testimonials .card-body { position: relative; }
 #slider_testimonials .card { position: relative; }
-#slider_testimonials .card:before { opacity: 0; border-radius: 10px; content: ""; width: 100%; height: 100%; }
+#slider_testimonials .card:before { opacity: 0; border-radius: 10px; content: ""; width: 100%; height: 100%; display: none; }
 #slider_testimonials .card:before { background: linear-gradient(#2f2bad 0%, #0099ff 100%); transition: 0.3s all; }
 #slider_testimonials .card:before { position: absolute; top: 0; left: 0; transform: scale(0.0); }
 #slider_testimonials .card:hover:before { opacity: 1; transform: scale(1); }
 #slider_testimonials .card:hover .fc-navy,
 #slider_testimonials .card:hover h4,
-#slider_testimonials .card:hover p { color: #FFFFFF; }
+#slider_testimonials .card:hover p { /*color: #FFFFFF; TMP*/ }
 #slider_testimonials .card h4,
 #slider_testimonials .card p { padding-left: 120px; transition: 0.3s all; }
 #slider_testimonials .card p.position { font-size: 14px; }
@@ -146,7 +160,10 @@ header .list-menu-item a:hover:before { width: 100%; }
 #slider_testimonials .carousel-indicators { margin: 0 20px; justify-content: flex-start; }
 #slider_testimonials .carousel-indicators li { width: 20px; height: 6px; margin-right: 4px; margin-left: 4px; transition: 0.3s all; }
 #slider_testimonials .carousel-indicators li { background-color: #2f2bad; opacity: 1; border-radius: 10px; border: 0; }
-#slider_testimonials .carousel-indicators li.active { background-color: #2f2bad; width: 40px; }
+#slider_testimonials .carousel-indicators li.active { width: 40px; }
+
+#slider_testimonials .card-body { min-height: 240px; }
+#slider_testimonials .carousel-indicators li { background-color: #FFFFFF; }
 
 /* Fold: Clients */
 .fold-clients { padding: 100px 0 50px; background: #ad2bad; color: #FFFFFF; }
@@ -241,6 +258,12 @@ footer .column-technicals li { margin-left: 30px; }
 .icon-scroll span { color: #FFFFFF; opacity: 0; transition: 0.3s all; }
 .icon-scroll:hover span { color: #FFFFFF; opacity: 1; }
 .icon-scroll:hover div { margin-top: 0; }
+
+/* Nodal: Dark */
+.modal-dark { color: #FFFFFF; background-color: transparent; }
+.modal-dark .modal-content { border: 0; border-radius: 10px; background: linear-gradient(rgba(47,43,173,1) 0%, rgba(173,43,173,1) 100%); }
+.modal-dark .modal-header { padding: 30px; background-color: transparent; height: auto; border-color: rgba(255, 255, 255, 0.2); }	
+.modal-dark .modal-body { padding: 30px; background-color: transparent; border-top: rgba(255, 255, 255, 0.2); }
 
 /* Animations */
 @keyframes beating {
